[package]
name = "remdb"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "remdb-caches",
    "remdb-fs",
    "remdb-hashs",
    "remdb-skiplist",
    "remdb-thread-pool",
    "remdb-varint",
]

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
crc32fast = "1.4.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-skiplist = "0.1.3"
memmap2 = "0.9.5"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
rand = "0.9.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
