[package]
name = "remdb"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["remdb-fs", "remdb-skiplist", "remdb-thread-pool", "remdb-utils"]

[dependencies]
# Exception
# anyhow = "1.0.95"
thiserror = "2.0.11"

# Multithreading
parking_lot = "0.12.3"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
remdb-thread-pool = { path = "./remdb-thread-pool" }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Utils
bytes = "1.10.0"
crc32fast = "1.4.2"
rand = "0.9.0"
remdb-skiplist = { path = "./remdb-skiplist" }
remdb-utils = { path = "./remdb-utils" }
remdb-fs = { path = "./remdb-fs" }
memmap2 = "0.9.5"

[dev-dependencies]
anyhow = "1.0.97"
itertools = "0.14.0"
scopeguard = "1.2.0"
tempfile = "3.18.0"
