[package]
name = "remdb"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
bytes = "1.10.1"
crc32fast = "1.4.2"
fast-async-mutex = "0.6.7"
itertools = "0.14.0"
rand = "0.9.0"
rio = "0.9.4"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.97"
tempfile = "3.18.0"
